# open3d_example

./: .gitignore  CMakeLists.txt  README.md
src/: gui_main_window.cxx  gui_main_window.h  main.cxx
